--- a/app/views/products/edit.html.slim
+++ b/app/views/products/edit.html.slim
@@ -1,8 +1,4 @@
-h1 Editing product
-
-== render 'form'
-
-= link_to 'Show', @product
-'|
-= link_to 'Back', products_path
-
+- model_class = Product
+.page-header
+  h1=t '.title', :default => [:'helpers.titles.edit', 'Edit %{model}'], :model => model_class.model_name.human.titleize
+= render :partial => "form"
