--- a/app/views/products/index.html.slim
+++ b/app/views/products/index.html.slim
@@ -1,32 +1,34 @@
-h1 Products
-
-.table-responsive
-  table.table.table-bordered.table-hover.table-striped
-    thead
+- model_class = Product
+.page-header
+  h1=t '.title', :default => model_class.model_name.human.pluralize.titleize
+table.table.table-striped
+  thead
+    tr
+      th= model_class.human_attribute_name(:id)
+      th= model_class.human_attribute_name(:name)
+      th= model_class.human_attribute_name(:title)
+      th= model_class.human_attribute_name(:description)
+      th= model_class.human_attribute_name(:concern_id)
+      th= model_class.human_attribute_name(:skin_type)
+      th= model_class.human_attribute_name(:sku)
+      th= model_class.human_attribute_name(:price)
+      th= model_class.human_attribute_name(:created_at)
+      th=t '.actions', :default => t("helpers.actions")
+  tbody
+    - @products.each do |product|
       tr
-        th Name
-        th Title
-        th Product name
-        th Concern
-        th Skin type
-        th SKU
-        th
+        td= link_to product.id, product_path(product)
+        td= product.name
+        td= product.title
+        td= product.description
+        td= product.concern_id
+        td= product.skin_type
+        td= product.sku
+        td= product.price
+        td=l product.created_at
+        td
+          = link_to t('.edit', :default => t("helpers.links.edit")), edit_product_path(product), :class => 'btn btn-default btn-xs'
+          '
+          = link_to t('.destroy', :default => t("helpers.links.destroy")), product_path(product), :method => :delete, :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) }, :class => 'btn btn-xs btn-danger'
 
-    tbody
-      - @products.each do |product|
-        tr
-          td = product.name
-          td = product.title
-          td = product.description
-          td = product.concern_id
-          td = product.skin_type
-          td = product.sku
-          td
-            .btn-group
-              = link_to 'Show', product, class: 'btn btn-default'
-              = link_to 'Edit', edit_product_path(product), class: 'btn btn-default'
-              = link_to 'Destroy', product, data: {:confirm => 'Are you sure?'}, :method => :delete, class: 'btn btn-danger'
-
-br
-
-= link_to 'New Product', new_product_path
+= link_to t('.new', :default => t("helpers.links.new")), new_product_path, :class => 'btn btn-primary'
