--- a/app/views/products/new.html.slim
+++ b/app/views/products/new.html.slim
@@ -1,5 +1,4 @@
-h1 New product
-
-== render 'form'
-
-= link_to 'Back', products_path
+- model_class = Product
+.page-header
+  h1=t '.title', :default => [:'helpers.titles.new', 'New %{model}'], :model => model_class.model_name.human.titleize
+= render :partial => "form"
