--- a/app/views/products/show.html.slim
+++ b/app/views/products/show.html.slim
@@ -1,18 +1,38 @@
-h2 = @product.name
-dl
-  td Name
-  dd = @product.name
-  td Title
-  dd = @product.title
-  td Description
-  dd = @product.description
-  td Concern:
-  dd = @product.concern_id
-  td Skin type:
-  dd = @product.skin_type
-  td SKU
-  dd = @product.sku
+- model_class = Product
+.page-header
+  h1=t '.title', :default => model_class.model_name.human.titleize
 
-= link_to 'Edit', edit_product_path(@product)
-'|
-= link_to 'Back', products_path
+p
+  strong= model_class.human_attribute_name(:name) + ':'
+  br
+  = @product.name
+p
+  strong= model_class.human_attribute_name(:title) + ':'
+  br
+  = @product.title
+p
+  strong= model_class.human_attribute_name(:description) + ':'
+  br
+  = @product.description
+p
+  strong= model_class.human_attribute_name(:concern_id) + ':'
+  br
+  = @product.concern_id
+p
+  strong= model_class.human_attribute_name(:skin_type) + ':'
+  br
+  = @product.skin_type
+p
+  strong= model_class.human_attribute_name(:sku) + ':'
+  br
+  = @product.sku
+p
+  strong= model_class.human_attribute_name(:price) + ':'
+  br
+  = @product.price
+
+= link_to t('.back', :default => t("helpers.links.back")), products_path, :class => 'btn btn-default'
+'
+= link_to t('.edit', :default => t("helpers.links.edit")), edit_product_path(@product), :class => 'btn btn-default'
+'
+= link_to t('.destroy', :default => t("helpers.links.destroy")), product_path(@product), :method => "delete", :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) }, :class => 'btn btn-danger'
