--- a/app/views/products/_form.html.slim
+++ b/app/views/products/_form.html.slim
@@ -15,10 +15,10 @@
       = f.text_field :description, :class => 'form-control'
     = f.error_span(:description)
   .form-group
-    = f.label :concern_id, :class => 'control-label col-lg-2'
+    = f.label :primary_concern, :class => 'control-label col-lg-2'
     .col-lg-10
-      = f.select :concern_id, Product.concerns.keys.to_a, {}, { class: 'form-control col-lg-2' }
-    = f.error_span(:concern_id)
+      = f.select :primary_concern, Product.primary_concerns.keys.to_a, {}, { class: 'form-control col-lg-2' }
+    = f.error_span(:primary_concern)
   .form-group
     = f.label :skin_type, :class => 'control-label col-lg-2'
     .col-lg-10
@@ -34,6 +34,10 @@
     .col-lg-10
       = f.text_field :price, :class => 'form-control'
     = f.error_span(:price)
+  .form-group
+    = f.label :markets, class: 'control-label col-lg-2'
+    .col-lg-10
+      = f.select :market_ids, Market.all.map { |c| [c.name, c.id] }, {}, { multiple: true, class: 'form-control' }
   .form-group
     .col-lg-offset-2.col-lg-10
       = f.submit nil, :class => 'btn btn-primary'
