--- a/app/views/profiles/index.html.slim
+++ b/app/views/profiles/index.html.slim
@@ -4,6 +4,7 @@
 table.table.table-striped
   thead
     tr
+      th Id
       th Name
       th Description
       th Language
@@ -15,6 +16,7 @@ table.table.table-striped
   tbody
     - @profiles.each do |profile|
       tr
+        td = profile.id
         td = profile.name
         td = profile.description
         td = profile.language_id
@@ -23,6 +25,7 @@ table.table.table-striped
         td = profile.welcome_button3
         td
           = link_to 'Edit', edit_profile_path(profile), class: 'btn btn-default btn-xs'
+          '
           = link_to 'Destroy', profile, data: {:confirm => 'Are you sure?'}, :method => :delete, class: 'btn btn-xs btn-danger'
 
 = link_to 'New Profile', new_profile_path
