--- a/app/views/products/index.html.slim
+++ b/app/views/products/index.html.slim
@@ -4,16 +4,16 @@
 table.table.table-striped
   thead
     tr
-      th= model_class.human_attribute_name(:id)
-      th= model_class.human_attribute_name(:name)
-      th= model_class.human_attribute_name(:title)
-      th= model_class.human_attribute_name(:description)
-      th= model_class.human_attribute_name(:concern)
-      th= model_class.human_attribute_name(:skin_type)
-      th= model_class.human_attribute_name(:sku)
-      th= model_class.human_attribute_name(:price)
-      th= model_class.human_attribute_name(:created_at)
-      th=t '.actions', :default => t("helpers.actions")
+      th Id
+      th Name
+      th Title
+      th Description
+      th Concern
+      th Skin Type
+      th SKU
+      th Price
+      th Created At
+      th
   tbody
     - @products.each do |product|
       tr
@@ -21,8 +21,8 @@ table.table.table-striped
         td= product.name
         td= product.title
         td= product.description
-        td= product.primary_concern
-        td= product.skin_type
+        td= product.primary_concern.value
+        td= product.skin_type.value
         td= product.sku
         td= product.price
         td=l product.created_at
