--- a/app/views/devices/_form.html.slim
+++ b/app/views/devices/_form.html.slim
@@ -7,12 +7,12 @@
   .form-group
     = f.label :device_type, :class => 'control-label col-lg-2'
     .col-lg-10
-      = f.select :device_type, Device.device_types.keys.to_a, {}, { class: 'form-control col-lg-2' }
+      = f.collection_select :device_type, Device::DeviceType, :itself, :value, {}, { class: 'form-control' }
     = f.error_span(:device_type)
   .form-group
     = f.label :lifecycle, :class => 'control-label col-lg-2'
     .col-lg-10
-      = f.select :lifecycle, Device.lifecycles.keys.to_a, {}, { class: 'form-control col-lg-2' }
+      = f.collection_select :lifecycle, Device::Lifecycle, :itself, :value, {}, { class: 'form-control' }
     = f.error_span(:lifecycle)
   .form-group
     = f.label :email_enabled, :class => 'control-label col-lg-2'
