--- a/app/views/products/_form.html.slim
+++ b/app/views/products/_form.html.slim
@@ -17,12 +17,12 @@
   .form-group
     = f.label :primary_concern, :class => 'control-label col-lg-2'
     .col-lg-10
-      = f.select :primary_concern, Product.primary_concerns.keys.to_a, {}, { class: 'form-control col-lg-2' }
+      = f.collection_select :primary_concern, Product::PrimaryConcern, :itself, :value, {}, { class: 'form-control' }
     = f.error_span(:primary_concern)
   .form-group
     = f.label :skin_type, :class => 'control-label col-lg-2'
     .col-lg-10
-      = f.select :skin_type, Product.skin_types.keys.to_a, {}, { class: 'form-control col-lg-2' }
+      = f.collection_select :skin_type, Product::SkinType, :itself, :value, {}, { class: 'form-control' }
     = f.error_span(:skin_type)
   .form-group
     = f.label :sku, :class => 'control-label col-lg-2'
