--- a/app/views/profiles/index.html.slim
+++ b/app/views/profiles/index.html.slim
@@ -7,7 +7,6 @@ table.table.table-striped
       th Id
       th Name
       th Description
-      th Language
       th Welcome button1
       th Welcome button2
       th Welcome button3
@@ -19,7 +18,6 @@ table.table.table-striped
         td = profile.id
         td = profile.name
         td = profile.description
-        td = profile.language_id
         td = profile.welcome_button1.value
         td = profile.welcome_button2.value
         td = profile.welcome_button3.value
@@ -28,4 +26,4 @@ table.table.table-striped
           '
           = link_to 'Destroy', profile, data: {:confirm => 'Are you sure?'}, :method => :delete, class: 'btn btn-xs btn-danger'
 
-= link_to 'New Profile', new_profile_path
+= link_to 'New', new_profile_path, class: 'btn btn-primary'
