--- a/app/views/products/_form.html.slim
+++ b/app/views/products/_form.html.slim
@@ -37,7 +37,11 @@
   .form-group
     = f.label :markets, class: 'control-label col-lg-2'
     .col-lg-10
-      = f.select :market_ids, Market.all.map { |c| [c.name, c.id] }, {}, { multiple: true, class: 'form-control' }
+      = f.collection_check_boxes :market_ids, Market.all, :id, :name, {} do |b|
+        .checkbox
+          = b.label do
+            = b.check_box
+            = b.text
   .form-group
     .col-lg-offset-2.col-lg-10
       = f.submit nil, :class => 'btn btn-primary'
