--- a/app/views/devices/_form.html.slim
+++ b/app/views/devices/_form.html.slim
@@ -30,4 +30,4 @@
     .col-lg-offset-2.col-lg-10
       = f.submit nil, :class => 'btn btn-primary'
       '
-      = link_to t('.cancel', :default => t("helpers.links.cancel")), devices_path, :class => 'btn'
+      = link_to 'Cancel', devices_path, class: 'btn'
