--- a/app/views/products/_form.html.slim
+++ b/app/views/products/_form.html.slim
@@ -5,15 +5,35 @@
       = f.text_field :name, :class => 'form-control'
     = f.error_span(:name)
   .form-group
+    = f.label :sku, :class => 'control-label col-lg-2'
+    .col-lg-10
+      = f.text_field :sku, :class => 'form-control'
+    = f.error_span(:sku)
+
+  .form-group
     = f.label :title, :class => 'control-label col-lg-2'
     .col-lg-10
       = f.text_field :title, :class => 'form-control'
     = f.error_span(:title)
+
   .form-group
     = f.label :description, :class => 'control-label col-lg-2'
     .col-lg-10
-      = f.text_field :description, :class => 'form-control'
+      = f.text_area :description, :class => 'form-control'
     = f.error_span(:description)
+
+  .form-group#translations
+    = f.label 'Translations', class: 'control-label col-lg-2'
+    .col-lg-10
+      = select_tag :selected_language, options_from_collection_for_select(Language.to_a, :key, :value), class: 'form-control'
+      = f.fields_for :translations do |translation_form|
+        - translation = translation_form.object
+        div data-language=(translation.language)
+          = translation_form.hidden_field :language
+          = translation_form.label :title, class: 'control-label'
+          = translation_form.text_field :title, class: 'form-control'
+          = translation_form.label :description, class: 'control-label'
+          = translation_form.text_area :description, class: 'form-control'
   .form-group
     = f.label :primary_concern, :class => 'control-label col-lg-2'
     .col-lg-10
@@ -24,11 +44,6 @@
     .col-lg-10
       = f.collection_select :skin_type, Product::SkinType, :itself, :value, {}, { class: 'form-control' }
     = f.error_span(:skin_type)
-  .form-group
-    = f.label :sku, :class => 'control-label col-lg-2'
-    .col-lg-10
-      = f.text_field :sku, :class => 'form-control'
-    = f.error_span(:sku)
   .form-group
     = f.label :price, :class => 'control-label col-lg-2'
     .col-lg-10
