--- a/app/views/products/index.html.slim
+++ b/app/views/products/index.html.slim
@@ -1,10 +1,9 @@
-- model_class = Product
 .page-header
-  h1=t '.title', :default => model_class.model_name.human.pluralize.titleize
+  h1 Products
+
 table.table.table-striped
   thead
     tr
-      th Id
       th Name
       th Title
       th Description
@@ -17,7 +16,6 @@ table.table.table-striped
   tbody
     - @products.each do |product|
       tr
-        td= product.id
         td= product.name
         td= product.title
         td= product.description
@@ -27,8 +25,8 @@ table.table.table-striped
         td= product.price
         td=l product.created_at
         td
-          = link_to t('.edit', :default => t("helpers.links.edit")), edit_product_path(product), :class => 'btn btn-default btn-xs'
+          = link_to 'Edit', edit_product_path(product), class: 'btn btn-default btn-xs'
           '
-          = link_to t('.destroy', :default => t("helpers.links.destroy")), product_path(product), :method => :delete, :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) }, :class => 'btn btn-xs btn-danger'
+          = link_to 'Destroy', product_path(product), method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-xs btn-danger'
 
-= link_to t('.new', :default => t("helpers.links.new")), new_product_path, :class => 'btn btn-primary'
+= link_to 'New', new_product_path, class: 'btn btn-primary'
