--- a/app/views/products/_form.html.slim
+++ b/app/views/products/_form.html.slim
@@ -1,25 +1,30 @@
 = form_for @product, html: { class: "form form-horizontal product" } do |f|
   .form-group
-    = f.label :name, :class => 'control-label col-lg-2'
+    = f.label :name, class: 'control-label col-lg-2'
     .col-lg-10
-      = f.text_field :name, :class => 'form-control'
+      = f.text_field :name, class: 'form-control'
     = f.error_span(:name)
   .form-group
-    = f.label :sku, :class => 'control-label col-lg-2'
+    = f.label :sku, class: 'control-label col-lg-2'
     .col-lg-10
-      = f.text_field :sku, :class => 'form-control'
+      = f.text_field :sku, class: 'form-control'
     = f.error_span(:sku)
+  .form-group
+    = f.label :category, class: 'control-label col-lg-2'
+    .col-lg-10
+      = f.collection_select :category_id, Category.all, :id, :name, {}, class: 'form-control'
+    = f.error_span(:category)
 
   .form-group
-    = f.label :title, :class => 'control-label col-lg-2'
+    = f.label :title, class: 'control-label col-lg-2'
     .col-lg-10
-      = f.text_field :title, :class => 'form-control'
+      = f.text_field :title, class: 'form-control'
     = f.error_span(:title)
 
   .form-group
-    = f.label :description, :class => 'control-label col-lg-2'
+    = f.label :description, class: 'control-label col-lg-2'
     .col-lg-10
-      = f.text_area :description, :class => 'form-control'
+      = f.text_area :description, class: 'form-control'
     = f.error_span(:description)
 
   .form-group#translations
@@ -34,20 +39,21 @@
           = translation_form.text_field :title, class: 'form-control'
           = translation_form.label :description, class: 'control-label'
           = translation_form.text_area :description, class: 'form-control'
+
   .form-group
-    = f.label :primary_concern, :class => 'control-label col-lg-2'
+    = f.label :primary_concern, class: 'control-label col-lg-2'
     .col-lg-10
       = f.collection_select :primary_concern, Product::PrimaryConcern, :itself, :value, {}, { class: 'form-control' }
     = f.error_span(:primary_concern)
   .form-group
-    = f.label :skin_type, :class => 'control-label col-lg-2'
+    = f.label :skin_type, class: 'control-label col-lg-2'
     .col-lg-10
       = f.collection_select :skin_type, Product::SkinType, :itself, :value, {}, { class: 'form-control' }
     = f.error_span(:skin_type)
   .form-group
-    = f.label :price, :class => 'control-label col-lg-2'
+    = f.label :price, class: 'control-label col-lg-2'
     .col-lg-10
-      = f.text_field :price, :class => 'form-control'
+      = f.text_field :price, class: 'form-control'
     = f.error_span(:price)
   .form-group
     = f.label :markets, class: 'control-label col-lg-2'
@@ -59,6 +65,6 @@
             = b.text
   .form-group
     .col-lg-offset-2.col-lg-10
-      = f.submit nil, :class => 'btn btn-primary'
+      = f.submit nil, class: 'btn btn-primary'
       '
-      = link_to t('.cancel', :default => t("helpers.links.cancel")), products_path, :class => 'btn'
+      = link_to 'Cancel', products_path, class: 'btn'
