Made related products unique, dropped users

--- a/app/views/products/_form.html.slim
+++ b/app/views/products/_form.html.slim
@@ -74,6 +74,7 @@
               class: 'form-control'
           .col-lg-2
             a.js-remove href="#" Remove
+      = f.error_span(:related_products)
       a.js-add href="#" Add
       .row.form-group.js-item.js-template
         .col-lg-10
