--- a/app/views/layouts/_sidebar.html.slim
+++ b/app/views/layouts/_sidebar.html.slim
@@ -1,5 +1,6 @@
 ul.nav.nav-pills.nav-stacked
   li = link_to 'Products', products_path
   li = link_to 'Categories', categories_path
+  li = link_to 'Primary Concerns', primary_concerns_path
   li = link_to 'Devices', devices_path
   li = link_to 'Profiles', profiles_path
