--- a/app/views/devices/_form.html.slim
+++ b/app/views/devices/_form.html.slim
@@ -1,9 +1,9 @@
 = form_for @device, html: { class: "form form-horizontal device" } do |f|
   .form-group
-    = f.label :username, :class => 'control-label col-lg-2'
+    = f.label :name, :class => 'control-label col-lg-2'
     .col-lg-10
-      = f.text_field :username, :class => 'form-control'
-    = f.error_span(:username)
+      = f.text_field :name, :class => 'form-control'
+    = f.error_span(:name)
   .form-group
     = f.label :device_type, :class => 'control-label col-lg-2'
     .col-lg-10
