--- a/app/views/devices/index.html.slim
+++ b/app/views/devices/index.html.slim
@@ -3,24 +3,22 @@
 table.table.table-striped
   thead
     tr
-      th Username
+      th Name
       th Device Type
       th Lifecycle
-      th Email Enabled
-      th Printer Enabled
+      th Profile
       th.actions
 
   tbody
     - @devices.each do |device|
       tr
-        td= device.username
-        td= device.device_type.value
-        td= device.lifecycle.value
-        td= device.email_enabled
-        td= device.printer_enabled
+        td = device.name
+        td = device.device_type.value
+        td = device.lifecycle.value
+        td = link_to device.profile.name, edit_profile_path(device.profile)
         td
-          = link_to t('.edit', :default => t("helpers.links.edit")), edit_device_path(device), :class => 'btn btn-default btn-xs'
+          = link_to 'Edit', edit_device_path(device), class: 'btn btn-default btn-xs'
           '
-          = link_to t('.destroy', :default => t("helpers.links.destroy")), device_path(device), :method => :delete, :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) }, :class => 'btn btn-xs btn-danger'
+          = link_to 'Destroy', device_path(device), method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-xs btn-danger'
 
 = link_to 'New', new_device_path, class: 'btn btn-primary'
