--- a/app/views/profiles/index.html.slim
+++ b/app/views/profiles/index.html.slim
@@ -14,6 +14,9 @@ table.table.table-striped
         td
           = link_to 'Edit', edit_profile_path(profile), class: 'btn btn-default btn-xs'
           '
-          = link_to 'Destroy', profile, data: {:confirm => 'Are you sure?'}, :method => :delete, class: 'btn btn-xs btn-danger'
+          - if profile.can_be_destroyed?
+            = link_to 'Destroy', profile, data: {:confirm => 'Are you sure?'}, :method => :delete, class: 'btn btn-xs btn-danger'
+          - else
+            = link_to 'Destroy', profile, class: 'btn btn-xs btn-danger disabled'
 
 = link_to 'New', new_profile_path, class: 'btn btn-primary'
