--- a/app/views/products/_form.html.slim
+++ b/app/views/products/_form.html.slim
@@ -12,8 +12,8 @@
   .form-group
     = f.label :category, class: 'control-label col-lg-2'
     .col-lg-10
-      = f.collection_select :category_id, Category.all, :id, :name, {}, class: 'form-control'
-    = f.error_span(:category)
+      = f.collection_select :category_id, Registry.category_repository.all, :id, :name, {}, class: 'form-control'
+    = f.error_span(:category_id)
 
   .form-group
     = f.label :title, class: 'control-label col-lg-2'
@@ -43,8 +43,8 @@
   .form-group
     = f.label :primary_concern, class: 'control-label col-lg-2'
     .col-lg-10
-      = f.collection_select :primary_concern_id, PrimaryConcern.all, :id, :name, {include_blank: true}, { class: 'form-control' }
-    = f.error_span(:primary_concern)
+      = f.collection_select :primary_concern_id, Registry.primary_concern_repository.all, :id, :name, {include_blank: true}, { class: 'form-control' }
+    = f.error_span(:primary_concern_id)
   .form-group
     = f.label :skin_type, class: 'control-label col-lg-2'
     .col-lg-10
@@ -58,7 +58,7 @@
   .form-group
     = f.label :markets, class: 'control-label col-lg-2'
     .col-lg-10
-      = f.collection_check_boxes :market_ids, Market.all, :id, :name, {} do |b|
+      = f.collection_check_boxes :market_ids, Registry.market_repository.all, :id, :name, {} do |b|
         .checkbox
           = b.label do
             = b.check_box
