--- a/app/views/profiles/_form.html.slim
+++ b/app/views/profiles/_form.html.slim
@@ -27,7 +27,7 @@
   .form-group
     = f.label :markets, class: 'control-label col-lg-2'
     .col-lg-10
-      = f.collection_check_boxes :market_ids, Market.all, :id, :name, {} do |b|
+      = f.collection_check_boxes :market_ids, Registry.market_repository.all, :id, :name, {} do |b|
         .checkbox
           = b.label do
             = b.check_box
