--- a/app/views/devices/_form.html.slim
+++ b/app/views/devices/_form.html.slim
@@ -1,4 +1,4 @@
-= form_for @device, html: { class: "form form-horizontal device" } do |f|
+= form_for @device_form, html: { class: "form form-horizontal device" } do |f|
   .form-group
     = f.label :name, :class => 'control-label col-lg-2'
     .col-lg-10
@@ -7,12 +7,12 @@
   .form-group
     = f.label :device_type, :class => 'control-label col-lg-2'
     .col-lg-10
-      = f.collection_select :device_type, Device::DeviceType, :itself, :value, {}, { class: 'form-control' }
+      = f.collection_select :device_type, Domain::Device::DeviceType, :itself, :value, {}, { class: 'form-control' }
     = f.error_span(:device_type)
   .form-group
     = f.label :lifecycle, :class => 'control-label col-lg-2'
     .col-lg-10
-      = f.collection_select :lifecycle, Device::Lifecycle, :itself, :value, {}, { class: 'form-control' }
+      = f.collection_select :lifecycle, Domain::Device::Lifecycle, :itself, :value, {}, { class: 'form-control' }
     = f.error_span(:lifecycle)
   .form-group
     = f.label :email_enabled, :class => 'control-label col-lg-2'
