--- a/app/views/profiles/_form.html.slim
+++ b/app/views/profiles/_form.html.slim
@@ -1,4 +1,4 @@
-= form_for @profile, html: { class: "form form-horizontal profile" } do |f|
+= form_for @profile_form, html: { class: "form form-horizontal profile" } do |f|
   .form-group
     = f.label :name, class: 'control-label col-lg-2'
     .col-lg-10
@@ -12,17 +12,17 @@
   .form-group
     = f.label :welcome_button1, class: 'control-label col-lg-2'
     .col-lg-10
-      = f.collection_select :welcome_button1, Profile::WelcomeButton, :itself, :value, {}, class: 'form-control'
+      = f.collection_select :welcome_button1, Domain::Profile::WelcomeButton, :itself, :value, {}, class: 'form-control'
     = f.error_span(:welcome_button1)
   .form-group
     = f.label :welcome_button2, class: 'control-label col-lg-2'
     .col-lg-10
-      = f.collection_select :welcome_button2, Profile::WelcomeButton, :itself, :value, {}, class: 'form-control'
+      = f.collection_select :welcome_button2, Domain::Profile::WelcomeButton, :itself, :value, {}, class: 'form-control'
     = f.error_span(:welcome_button2)
   .form-group
     = f.label :welcome_button3, class: 'control-label col-lg-2'
     .col-lg-10
-      = f.collection_select :welcome_button3, Profile::WelcomeButton, :itself, :value, {}, class: 'form-control'
+      = f.collection_select :welcome_button3, Domain::Profile::WelcomeButton, :itself, :value, {}, class: 'form-control'
     = f.error_span(:welcome_button3)
   .form-group
     = f.label :markets, class: 'control-label col-lg-2'
