--- a/app/views/products/_form.html.slim
+++ b/app/views/products/_form.html.slim
@@ -48,7 +48,7 @@
   .form-group
     = f.label :skin_type, class: 'control-label col-lg-2'
     .col-lg-10
-      = f.collection_select :skin_type, Domain::Product::SkinType, :itself, :value, {}, { class: 'form-control' }
+      = f.collection_select :skin_type, Domain::Product::SkinType, :name, :value, {}, { class: 'form-control' }
     = f.error_span(:skin_type)
   .form-group
     = f.label :price, class: 'control-label col-lg-2'
